# virtools-interface

./: CMakeLists.txt
idl/gepetto/virtools/: virtools-interface.idl  virtools-interface.idl~
include/gepetto/virtools/corba/: client.hh  client.hh~  fff-manager.h~  fwd.hh  fwd.hh~  server.hh  server.hh~  virtools-manager.h
src/: .virtools-interface.impl.cpp.swp  .virtools-interface.impl.hh.swp  CMakeLists.txt  client.cc  corbaserver.cc  server-private.cc  server-private.hh  server.cc  test.cc  virtools-interface.impl.cpp  virtools-interface.impl.hh  virtools-manager.cpp
src/gepetto/corbaserver/: __init__.py  __init__.py~  client.py  client.py~
